<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:launcher="http://schemas.android.com/apk/res/com.joy.launcher"
        >
    <!-- UI -->
    <PreferenceCategory android:title="@string/preferences_interface_title"
        android:layout="@layout/joy_preference_category">
        <!-- Homescreen -->
        <PreferenceScreen android:key="ui_homescreen"
            android:title="@string/preferences_interface_homescreen_title"
            android:icon="@drawable/preference_set_homescreen"
            android:layout="@layout/joy_preference_preferencescreen"
            >
            <PreferenceCategory android:title="@string/preferences_interface_homescreen_general_category"
                android:layout="@layout/joy_preference_category">
                <com.joy.launcher.preference.NumberPickerPreference android:key="ui_homescreen_screens"
                    android:title="@string/preferences_interface_homescreen_general_screens_title"
                    android:summary="@string/preferences_interface_homescreen_general_screens_summary"
                    android:defaultValue="5"
                    launcher:max="7"
                    launcher:min="1" />
                <com.joy.launcher.preference.NumberPickerPreference android:key="ui_homescreen_default_screen"
                    android:title="@string/preferences_interface_homescreen_general_default_screen_title"
                    android:summary="@string/preferences_interface_homescreen_general_default_screen_summary"
                    android:defaultValue="3"
                    launcher:maxExternal="ui_homescreen_screens"
                    launcher:max="7"
                    launcher:min="1" />
                <!-- delete by huangming -->
                <!-- <com.joy.launcher.preference.DoubleNumberPickerPreference android:key="ui_homescreen_grid"
                    android:title="@string/preferences_interface_homescreen_general_grid_title"
                    android:summary="@string/preferences_interface_homescreen_general_grid_summary"
                    launcher:pickerTitle1="@string/preferences_interface_homescreen_general_grid_rows_title"
                    launcher:pickerTitle2="@string/preferences_interface_homescreen_general_grid_columns_title"
                    launcher:defaultValue1="@integer/config_workspaceRows"
                    launcher:defaultValue2="@integer/config_workspaceColumns"
                    launcher:max1="7"
                    launcher:min1="3"
                    launcher:max2="7"
                    launcher:min2="3" /> -->
                <com.joy.launcher.preference.NumberPickerPreference android:key="ui_homescreen_screen_padding_vertical"
                    android:title="@string/preferences_interface_homescreen_general_screen_padding_vertical_title"
                    android:summary="@string/preferences_interface_homescreen_general_screen_padding_vertical_summary"
                    android:defaultValue="0"
                    launcher:max="10"
                    launcher:min="0" />
                <com.joy.launcher.preference.NumberPickerPreference android:key="ui_homescreen_screen_padding_horizontal"
                    android:title="@string/preferences_interface_homescreen_general_screen_padding_horizontal_title"
                    android:summary="@string/preferences_interface_homescreen_general_screen_padding_horizontal_summary"
                    android:defaultValue="0"
                    launcher:max="10"
                    launcher:min="0" />
                <CheckBoxPreference android:key="ui_homescreen_general_search"
                    android:title="@string/preferences_interface_homescreen_general_search_title"
                    android:summary="@string/preferences_interface_homescreen_general_search_summary"
                    android:defaultValue="true" />
                <CheckBoxPreference android:key="ui_homescreen_general_resize_any_widget"
                    android:title="@string/preferences_interface_homescreen_general_resize_any_widget_title"
                    android:summary="@string/preferences_interface_homescreen_general_resize_any_widget_summary" />
                <CheckBoxPreference android:key="ui_homescreen_general_hide_icon_labels"
                    android:title="@string/preferences_interface_homescreen_general_hide_icon_labels_title"
                    android:summary="@string/preferences_interface_homescreen_general_hide_icon_labels_summary" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/preferences_interface_homescreen_scrolling_category"
                android:layout="@layout/joy_preference_category">
<!--                 <ListPreference android:key="ui_homescreen_scrolling_transition_effect" -->
<!--                     android:title="@string/preferences_interface_homescreen_scrolling_transition_effect_title" -->
<!--                     android:summary="@string/preferences_interface_homescreen_scrolling_transition_effect_summary" -->
<!--                     android:entries="@array/preferences_interface_homescreen_scrolling_transition_effect_entries" -->
<!--                     android:entryValues="@array/preferences_interface_homescreen_scrolling_transition_effect_values" -->
<!--                     android:defaultValue="@string/config_workspaceDefaultTransitionEffect" /> -->
				<com.joy.launcher.preference.mylistpreference.MyListPreference
				    android:key="ui_homescreen_scrolling_transition_effect"
				    android:summary="@string/preferences_interface_homescreen_scrolling_transition_effect_summary"
				    android:title="@string/preferences_interface_homescreen_scrolling_transition_effect_title"
				    launcher:entries="@array/preferences_interface_homescreen_scrolling_transition_effect_entries"
				    launcher:entryDrawables="@array/preferences_interface_homescreen_scrolling_transition_effect_drawables"
				    launcher:entryValues="@array/preferences_interface_homescreen_scrolling_transition_effect_values" >
				</com.joy.launcher.preference.mylistpreference.MyListPreference>

                <CheckBoxPreference android:key="ui_homescreen_scrolling_fade_adjacent_screens"
                    android:title="@string/preferences_interface_homescreen_scrolling_fade_adjacent_screens_title"
                    android:summary="@string/preferences_interface_homescreen_scrolling_fade_adjacent_screens_summary"
                    android:defaultValue="@bool/config_workspaceDefualtFadeInAdjacentScreens" />
                <CheckBoxPreference android:key="ui_homescreen_scrolling_scroll_wallpaper"
                    android:title="@string/preferences_interface_homescreen_scrolling_scroll_wallpaper_title"
                    android:summary="@string/preferences_interface_homescreen_scrolling_scroll_wallpaper_summary"
                    android:defaultValue="true" />
            </PreferenceCategory>
            <PreferenceCategory android:key="ui_homescreen_indicator"
                android:title="@string/preferences_interface_homescreen_indicator_category"
                android:layout="@layout/joy_preference_category">
                <CheckBoxPreference android:key="ui_homescreen_indicator_enable"
                    android:title="@string/preferences_interface_homescreen_indicator_enable_title"
                    android:summary="@string/preferences_interface_homescreen_indicator_enable_summary"
                    android:defaultValue="true" />
                <CheckBoxPreference android:key="ui_homescreen_indicator_fade"
                    android:title="@string/preferences_interface_homescreen_indicator_fade_title"
                    android:summary="@string/preferences_interface_homescreen_indicator_fade_summary"
                    android:defaultValue="true"
                    android:dependency="ui_homescreen_indicator_enable" />
                <CheckBoxPreference android:key="ui_homescreen_indicator_background"
                    android:title="@string/preferences_interface_homescreen_indicator_background_title"
                    android:summary="@string/preferences_interface_homescreen_indicator_background_summary"
                    android:defaultValue="true" />
            </PreferenceCategory>
            <!-- add by huangming for Desktop appearance  -->
            <PreferenceCategory android:key="ui_homescreen_appearance"
                android:title="@string/preferences_interface_homescreen_appearance_category"
                android:layout="@layout/joy_preference_category">                
				<Preference android:key="ui_homescreen_icon_style"
				    android:summary="@string/preferences_interface_homescreen_icon_style_summary"
				    android:title="@string/preferences_interface_homescreen_icon_style_title"/>
                <com.joy.launcher.preference.mylistpreference.MyListPreference
				    android:key="ui_homescreen_icon_size"
				    android:summary="@string/preferences_interface_homescreen_icon_size_summary"
				    android:title="@string/preferences_interface_homescreen_icon_size_title"
				    launcher:entries="@array/preferences_interface_homescreen_icon_szie_entries"
				    launcher:entryValues="@array/preferences_interface_homescreen_icon_size_values" >
				</com.joy.launcher.preference.mylistpreference.MyListPreference>
				<com.joy.launcher.preference.mylistpreference.MyListPreference
				    android:key="ui_homescreen_icon_text_size"
				    android:summary="@string/preferences_interface_homescreen_icon_text_size_summary"
				    android:title="@string/preferences_interface_homescreen_icon_text_size_title"
				    launcher:entries="@array/preferences_interface_homescreen_icon_text_szie_entries"
				    launcher:entryValues="@array/preferences_interface_homescreen_icon_text_size_values" >
				</com.joy.launcher.preference.mylistpreference.MyListPreference>
                <com.joy.launcher.preference.DoubleNumberPickerPreference android:key="ui_homescreen_grid"
                    android:title="@string/preferences_interface_homescreen_row_column_num_title"
                    android:summary="@string/preferences_interface_homescreen_row_column_num_summary"
                    launcher:pickerTitle1="@string/preferences_interface_homescreen_general_grid_rows_title"
                    launcher:pickerTitle2="@string/preferences_interface_homescreen_general_grid_columns_title"
                    launcher:defaultValue1="@integer/config_workspaceRows"
                    launcher:defaultValue2="@integer/config_workspaceColumns"
                    launcher:max1="5"
                    launcher:min1="3"
                    launcher:max2="5"
                    launcher:min2="3" />
            </PreferenceCategory>
        </PreferenceScreen>

        <!-- Drawer -->
        <PreferenceScreen android:key="ui_drawer"
            android:title="@string/preferences_interface_drawer_title"
            android:icon="@drawable/preference_set_drawer"
            android:layout="@layout/joy_preference_preferencescreen">
            <PreferenceCategory android:title="@string/preferences_interface_drawer_widgets_category"
                android:layout="@layout/joy_preference_category">
                <CheckBoxPreference android:key="ui_drawer_widgets_join_apps"
                    android:title="@string/preferences_interface_drawer_widgets_join_apps_title"
                    android:summary="@string/preferences_interface_drawer_widgets_join_apps_summary"
                    android:defaultValue="true" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/preferences_interface_drawer_scrolling_category"
                android:layout="@layout/joy_preference_category">
<!--                 <ListPreference android:key="ui_drawer_scrolling_transition_effect" -->
<!--                     android:title="@string/preferences_interface_drawer_scrolling_transition_effect_title" -->
<!--                     android:summary="@string/preferences_interface_drawer_scrolling_transition_effect_summary" -->
<!--                     android:entries="@array/preferences_interface_drawer_scrolling_transition_effect_entries" -->
<!--                     android:entryValues="@array/preferences_interface_drawer_scrolling_transition_effect_values" -->
<!--                     android:defaultValue="@string/config_drawerDefaultTransitionEffect" /> -->
				<com.joy.launcher.preference.mylistpreference.MyListPreference
				    android:key="ui_drawer_scrolling_transition_effect"
				    android:summary="@string/preferences_interface_drawer_scrolling_transition_effect_summary"
				    android:title="@string/preferences_interface_drawer_scrolling_transition_effect_title"
				    launcher:entries="@array/preferences_interface_drawer_scrolling_transition_effect_entries"
				    launcher:entryDrawables="@array/preferences_interface_homescreen_scrolling_transition_effect_drawables"
				    launcher:entryValues="@array/preferences_interface_drawer_scrolling_transition_effect_values" >
				</com.joy.launcher.preference.mylistpreference.MyListPreference>

                <CheckBoxPreference android:key="ui_drawer_scrolling_fade_adjacent_screens"
                    android:title="@string/preferences_interface_drawer_scrolling_fade_adjacent_screens_title"
                    android:summary="@string/preferences_interface_drawer_scrolling_fade_adjacent_screens_summary" />
            </PreferenceCategory>
            <PreferenceCategory android:key="ui_drawer_indicator"
                android:title="@string/preferences_interface_drawer_indicator_category"
                android:layout="@layout/joy_preference_category">
                <CheckBoxPreference android:key="ui_drawer_indicator_enable"
                    android:title="@string/preferences_interface_drawer_indicator_enable_title"
                    android:summary="@string/preferences_interface_drawer_indicator_enable_summary"
                    android:defaultValue="true" />
                <CheckBoxPreference android:key="ui_drawer_indicator_fade"
                    android:title="@string/preferences_interface_drawer_indicator_fade_title"
                    android:summary="@string/preferences_interface_drawer_indicator_fade_summary"
                    android:defaultValue="true"
                    android:dependency="ui_drawer_indicator_enable" />
            </PreferenceCategory>
        </PreferenceScreen>

        <!-- Dock -->
        <!-- <PreferenceScreen android:key="ui_dock"
            android:title="@string/preferences_interface_dock_title">

        </PreferenceScreen> -->

        <!-- Icons -->
        <!-- <PreferenceScreen android:key="ui_icons"
            android:title="@string/preferences_interface_icons_title">

        </PreferenceScreen> -->

        <!-- General -->
        <PreferenceScreen android:key="ui_general"
            android:title="@string/preferences_interface_general_title"
            android:icon="@drawable/preference_set_general"
            android:layout="@layout/joy_preference_preferencescreen"
            >
            <CheckBoxPreference android:key="ui_general_orientation"
                android:title="@string/preferences_interface_general_orientation_title"
                android:defaultValue="@bool/config_defaultAutoRotate" />
            <CheckBoxPreference android:key="ui_general_screen_cycle"
                android:title="@string/preferences_interface_general_screen_cycle_title"
                android:defaultValue="@bool/config_defaultScreenCycle" />
        </PreferenceScreen>
    </PreferenceCategory>

        <!-- backup & recover -->
    <PreferenceCategory android:title="@string/preferences_bakcup_recover_title"
        android:layout="@layout/joy_preference_category">
        <PreferenceScreen android:key="preferences_bakcup"
            android:title="@string/preferences_bakcup_title"
            android:icon="@drawable/preference_backup"
            android:layout="@layout/joy_preference_preferencescreen"/>
        <PreferenceScreen android:key="preferences_recover"
            android:title="@string/preferences_recover_title"
            android:icon="@drawable/preference_recover"
            android:layout="@layout/joy_preference_preferencescreen"/>
    </PreferenceCategory>
    
    <!-- Application -->
    <PreferenceCategory android:title="@string/preferences_application_title"
        android:layout="@layout/joy_preference_category">
        <PreferenceScreen android:key="application_version"
            android:title="@string/application_name"
            android:summary="@string/application_copyright"
            android:icon="@drawable/preference_aboutme"
            android:layout="@layout/joy_preference_preferencescreen"/>
    </PreferenceCategory>
</PreferenceScreen>
