<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<favorites xmlns:launcher="http://schemas.android.com/apk/res/com.joy.launcher">
    <!-- Far-left screen [0] -->

    <!-- Left screen [1] -->
	<favorite
	    launcher:natureId="1"
	    launcher:icon="@drawable/ic_launcher_home"
	    launcher:title="@string/virtualshortcut_test"
	    launcher:className="com.polontech.android.c360by.activities.RegisterActivity"
	    launcher:packageName="com.polontech.android.c360by"
	    launcher:screen="2"
	    launcher:x="1"
	    launcher:y="3" />

    <!-- Middle screen [2] -->
    <folder
        launcher:natureId="0"
        launcher:screen="2"
        launcher:title="@string/joy_game_folder"
        launcher:x="0"
        launcher:y="0" >
        <favorite
            launcher:className="com.android.contacts.activities.DialtactsActivity"
            launcher:packageName="com.android.contacts" />
        <favorite
            launcher:className="com.android.contacts.activities.DialtactsActivity"
            launcher:packageName="com.android.contacts" />
    </folder>
    <folder
        launcher:natureId="1"
        launcher:screen="2"
        launcher:title="@string/joy_application_folder"
        launcher:x="1"
        launcher:y="0" >
        <favorite
            launcher:className="com.android.contacts.activities.DialtactsActivity"
            launcher:packageName="com.android.contacts" />
        <favorite
            launcher:className="com.android.contacts.activities.DialtactsActivity"
            launcher:packageName="com.android.contacts" />
    </folder>
    <folder
        launcher:natureId="-1"
        launcher:screen="2"
        launcher:x="2"
        launcher:y="0" >
        <favorite
            launcher:className="com.android.contacts.activities.DialtactsActivity"
            launcher:packageName="com.android.contacts" />
        <favorite
            launcher:className="com.android.contacts.activities.DialtactsActivity"
            launcher:packageName="com.android.contacts" />
    </folder>
    <appwidget
        launcher:packageName="com.android.deskclock"
        launcher:className="com.android.alarmclock.AnalogAppWidgetProvider"
        launcher:screen="2"
        launcher:x="1"
        launcher:y="0"
        launcher:spanX="2"
        launcher:spanY="2" />
    <favorite
        launcher:packageName="com.android.camera"
        launcher:className="com.android.camera.Camera"
        launcher:screen="2"
        launcher:x="0"
        launcher:y="3" />
    <favorite
        launcher:packageName="com.android.gallery3d"
        launcher:className="com.android.gallery3d.app.Gallery"
        launcher:screen="2"
        launcher:x="3"
        launcher:y="3" />

    <!-- Right screen [3] -->

    <!-- Far-right screen [4] -->

    <!-- Hotseat (We use the screen as the position of the item in the hotseat) -->
    <favorite
        launcher:packageName="com.android.contacts"
        launcher:className="com.android.contacts.activities.DialtactsActivity"
        launcher:container="-101"
        launcher:screen="0"
        launcher:x="0"
        launcher:y="0" />
    <favorite
        launcher:packageName="com.android.contacts"
        launcher:className="com.android.contacts.activities.PeopleActivity"
        launcher:container="-101"
        launcher:screen="1"
        launcher:x="1"
        launcher:y="0" />
    <favorite
        launcher:packageName="com.android.mms"
        launcher:className="com.android.mms.ui.ConversationList"
        launcher:container="-101"
        launcher:screen="3"
        launcher:x="3"
        launcher:y="0" />
    <favorite
        launcher:packageName="com.android.browser"
        launcher:className="com.android.browser.BrowserActivity"
        launcher:container="-101"
        launcher:screen="4"
        launcher:x="4"
        launcher:y="0" />
</favorites>
